# zed

./: Cargo.toml
.github/actions/: import-gpui-component.yaml
.github/workflows/: import-gpui-component.yaml
crates/gpui/: Cargo.toml
crates/gpui/src/: app.rs
crates/gpui_combined/: Cargo.toml
crates/gpui_component/: Cargo.toml
crates/gpui_component_assets/: Cargo.toml
crates/gpui_component_story/: Cargo.toml
crates/gpui_component_story_web/: Cargo.toml
crates/gpui_facade/: Cargo.toml  README.md
crates/gpui_facade/src/: main.rs
crates/gpui_platform/src/: gpui_platform.rs
