[package]
name = "gpui_combined"
version = "0.1.0"
edition.workspace = true
publish = false
license = "Apache-2.0"

[lints]
workspace = true

[lib]
path = "src/gpui_combined.rs"

[features]
default = ["font-kit", "wayland", "x11", "windows-manifest"]
test-support = ["gpui/test-support", "gpui_platform/test-support"]
bench = ["gpui/bench"]
inspector = ["gpui/inspector"]
leak-detection = ["gpui/leak-detection"]
wayland = ["gpui/wayland", "gpui_platform/wayland"]
x11 = ["gpui/x11", "gpui_platform/x11"]
screen-capture = ["gpui/screen-capture", "gpui_platform/screen-capture"]
windows-manifest = ["gpui/windows-manifest"]
input-latency-histogram = ["gpui/input-latency-histogram"]
profiler = ["gpui/profiler"]
font-kit = ["gpui_platform/font-kit"]
runtime_shaders = ["gpui_platform/runtime_shaders"]

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
